apply plugin: "java"

sourceCompatibility = 1.10
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
